templates/envoy.yaml
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      re2:
        max_program_size:
          error_level: 10000
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: http_local_rate_limiter
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes: 
  clusters:
  - name: main-cluster
    type: STRICT_DNS
    load_assignment:
      cluster_name: main-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address:
                port_value:
